--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
 									<li class="d-flex"><span>Domain:</span> <span>Software Development</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English,Telugu, Hindi</span></li>
-									<li class="d-flex"><span>Frontend Technologies:</span> <span>HTML, JavaScript, CSS, ReactJS, Bootstrap </span></li>
-									<li class="d-flex"><span>Backend Technologies</span> <span>Java,Spring Boot</span></li>
-									<li class="d-flex"><span>DataBases</span> <span>SQL,MYSQL</span></li>
+									<li class="d-flex"><span>Frontend:</span> <span>HTML, JavaScript, CSS, ReactJS, Bootstrap </span></li>
+									<li class="d-flex"><span>Backend:</span> <span>Java,Spring Boot</span></li>
+									<li class="d-flex"><span>DataBases:</span> <span>SQL,MYSQL</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Digital Art, Cricket</span></li>
 									
 								</ul>
@@ -366,7 +366,7 @@
     					<span class="date">2021-2024</span>
     					<h2>Bachelor of Engineering</h2>
     					<span class="position">JOginpally BR Enginnering College</span>
-    					<p class="mt-4">Grade: First class distinction.</p>
+    					<p class="mt-4">Grade: First class .</p>
     				</div>
     			</div>
 
